--- a/requirements.yml
+++ b/requirements.yml
@@ -4,16 +4,23 @@ functional:
   - Пользователь должен иметь возможность фильтровать товары
   - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
   - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  - Возможность просмотра каталога товаров с постраничным выводом
+  - Возможность удаления товаров из корзины
+  - Возможность оформления заказа с переходом на страницу оплаты
 non-functional:
-  - Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
+  - Сайт нужно разработать с учетом удобства использования
+  - Сайт нужно оптимизировать для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
   - Сайт должен иметь мобильную версию
   - Сайт нужно протестировать на совместимость с последними версиями браузеров
   - Важно, чтобы сайт мог обрабатывать большое количество трафика
   - Сайт должен быть доступен на различных устройствах
+  - Реализация в виде SPA-приложения без перезагрузки страниц
+  - Хранение корзины в сессии браузера
 implicit:
-  - Количество и наименование категорий?
-  - По каким критериям должен быть реализован фильтр?
-  - Описание товара необходимо на основной сранице или только в карточке товара?
-  - Какие технологии будут использоваться для защиты сайта и данных пользователя?
-  - Какой предполагаемый поток поситителей сайта?
+  - Интуитивно понятный пользовательский интерфейс
+  - Обработка ошибок и вывод понятных пользователю сообщений
+  - Валидация данных при оформлении заказа
+  - Возможность просмотра истории заказов
+  - Система кеширования данных для улучшения производительности
+  - Система аналитики для отслеживания поведения пользователей
