--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,10 +1,10 @@
 ---
 - summary: |
-    Проверка возможности искать товары по ключевому слову или категории
+    Проверка возможности искать товары по категории
   requirement: |
     При выборе категории, должны выдаваться соответствующие товары
   prerequisites: |
-    Должна быть открыта страница https://hexlet-products-store.vercel.app/
+    Должна быть открыта страница со списком товаров
   test-data: |
     Категории
   steps: |
@@ -13,11 +13,11 @@
     Отображаются товары соответствующие выбранной категории
 
 - summary: |
-    Проверка возможности искать товары по ключевому слову или  категории
+    Проверка возможности искать товары по ключевому слову
   requirement: |
     При вводе ключевого слова, которое присутствует в наименовании или описании товара, должны выдаваться подходящии товары
   prerequisites: |
-    Должна быть открыта страница https://hexlet-products-store.vercel.app/
+    Должна быть открыта страница со списком товаров
   test-data: |
     Ключевое слово, которое присутствует в наименовании или описании товара
   steps: |
@@ -26,26 +26,24 @@
     Отображаются товары в которых присутствует ключевое слово в наименовании или описании товара
 
 - summary: |
-    Проверка возможности искать товары по ключевому слову или  категории
+    Проверка возможности искать товары по ключевому слову
   requirement: |
     При вводе ключевого слова, которое отсутствует в названии или описании товара, должно выводиться 'Nothing found!'
   prerequisites: |
-    Должна быть открыта страница https://hexlet-products-store.vercel.app/
+    Должна быть открыта страница со списком товаров
   test-data: |
     Ключевое слово, которое отсутствует в названии или описании товара
   steps: |
-    В 'Search' вводим ключевое слово
+    В поиске вводим ключевое слово
   expected-result: |
     Отображается 'Nothing found!' в списке товаров
 
-
----
 - summary: |
     Проверка  возможности фильтровать товары
   requirement: |
     При выборе фильтра должны выводиться соответствующие товары
   prerequisites: |
-    Должна быть открыта страница https://hexlet-products-store.vercel.app/
+    Должна быть открыта страница со списком товаров
   test-data: |
     Блок фильтра
   steps: |
@@ -53,32 +51,28 @@
   expected-result: |
     Отображаются товары соответствующие установленным фильтрам
 
-
----
 - summary: |
     Проверка возможности просматривать товары и просматривать подробную информацию о товаре
   requirement: |
     В списке товаров должны отображаться наименование и подробное описание товара
   prerequisites: |
-    Должна быть открыта страница https://hexlet-products-store.vercel.app/
+    Должна быть открыта страница со списком товаров
   test-data: |
     Список товаров
   steps:
     - Открываем список товаров
-    - Изучаем информацию
+    - Переходим на страницу лююбого товара из списка
   expected-result: |
-    В списке товаров присутствует наименование и подробное описание товара
+    На странице выбранного товаа присутствует наименование и подробное описание товара
 
-
----
 - summary: |
     Проверка возможности добавлять товары в корзину
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину
   prerequisites: |
-    Должна быть открыта страница https://hexlet-products-store.vercel.app/
+    Должна быть открыта страница со списком товаров
   test-data: |
-    Кнопка "Add to cart"
+    Кнопка добавления товара
   steps:
     Добавляем товар в корзину
   expected-result: |
@@ -89,7 +83,7 @@
   requirement: |
     Пользователь должен иметь возможность просматривать содержимое корзины
   prerequisites: |
-    Должна быть открыта страница https://hexlet-products-store.vercel.app/
+    Должна быть открыта страница со списком товаров
   test-data: |
     Содержимое корзины
   steps:
@@ -98,19 +92,103 @@
   expected-result: |
     Отображается список добавленных товаров
 
+- summary: |
+    Проверка возможности просмотра каталога товаров с постраничным выводом
+  requirement: |
+    Пользователь должен иметь возможность просмотривать каталог товаров с постраничным выводом
+  prerequisites: |
+    Должна быть открыта страница со списком товаров
+  test-data: |
+    Наличие постраничного вывода
+  steps:
+    - На странице списка товаров ищем кноку перехода на следующую странцу
+    - Нажимаем кнопку
+  expected-result: |
+    Успешно перешли на следующую страницу с товарами
 
----
 - summary: |
     Проверка возможности удаления товаров из корзины
   requirement: |
     Пользователь должен иметь возможность удаления товаров из корзины
   prerequisites: |
-    Должна быть открыта страница https://hexlet-products-store.vercel.app/
+    Должна быть открыта страница со списком товаров
   test-data: |
-    Кнопка "Delete" в корзине
+    Кнопка удалить в корзине
   steps:
     - Добавляем товар в корзину
     - Переходим на страницу корзины
     - Удаляем товар из корзины
   expected-result: |
     Товар успешно удален из корзины
+
+- summary: |
+    Проверка возможности оформления заказа с переходом на страницу оплаты
+  requirement: |
+    Пользователь должен иметь возможность оформления заказа с переходом на страницу оплаты
+  prerequisites: |
+    Должна быть открыта страница со списком товаров
+  test-data: |
+    Кнопка оплаты
+  steps:
+    - Добавляем товар в корзину
+    - Переходим на страницу корзины
+    - Ищем кнопку оплаты
+    - Нажимаем кнопку оплаты
+  expected-result: |
+    Должны перейти на страницу оплаты
+
+Сайт должен быть безопасным и защищать данные пользователя
+- summary: |
+    Проверка сайта на безопасность и защищиту данных пользователя
+  requirement: |
+    Сайт должен быть безопасным и защищать данные пользователя
+  prerequisites: |
+    Должна быть открыта страница со списком товаров
+  test-data: |
+    Все поля ввода
+  steps:
+    Проверяем все поля ввода на возможность XSS атаки
+  expected-result: |
+    XSS атака не должна пройти
+
+- summary: |
+    Проверка наличия мобильной версии сайта
+  requirement: |
+    Сайт должен иметь мобильную версию
+  prerequisites: |
+    Должна быть открыта главная страница сайта на мобильном устройстве
+  test-data: |
+    Адаптивность данных под мобильное устройство
+  steps:
+    Проверяем визуально удобство просмотра даных на мобильном устройстве
+  expected-result: |
+    Содержимое сайта удобно просматривать с мобильного устройства
+
+- summary: |
+    Проверка сайта на совместимость с последними версиями браузеров
+  requirement: |
+    Сайт должен быть совместим с последними версиями браузеров
+  prerequisites: |
+   Должна быть открыта главная страница сайта в последних версиях Google Chrome и Firefox 
+  test-data: |
+    Корректное отображение данных
+  steps:
+    - Изучить сайт в браузере Google Chrome
+    - Изучить сайт в браузере Firefox
+  expected-result: |
+    Сайт совместим с последними версиями браузеров
+
+- summary: |
+    Проверка доступности сайта на различных устройствах
+  requirement: |
+    Сайт должен быть доступен на различных устройствах
+  prerequisites: |
+   Должна быть открыта главная страница сайта 
+  test-data: |
+    Адаптивность сайта на разных устройствах
+  steps:
+    - Изучить сайт на компьютере
+    - Изучить сайт на планшете
+    - Изучить сайт на мобильном телефоне
+  expected-result: |
+    Сайт должен быть читабельным на всех видах устройств
