--- a/testing-report.yml
+++ b/testing-report.yml
@@ -37,4 +37,16 @@
 
 - summary: |
     Проверка сайта на безопасность и защищиту данных пользователя
-  status: 
+  status: pass
+
+- summary: |
+    Проверка наличия мобильной версии сайта
+  status: fail
+
+- summary: |
+    Проверка сайта на совместимость с последними версиями браузеров
+  status: pass
+
+- summary: |
+    Проверка доступности сайта на различных устройствах
+  status: fail
