--- a/test-cases.yml
+++ b/test-cases.yml
@@ -8,7 +8,7 @@
   test-data: |
     Категории
   steps: |
-    Выбираем нужную категорию
+    - Выбираем нужную категорию
   expected-result: |
     Отображаются товары соответствующие выбранной категории
 
@@ -21,7 +21,7 @@
   test-data: |
     Ключевое слово, которое присутствует в наименовании или описании товара
   steps: |
-    В 'Search' вводим ключевое слово
+    - В поиске вводим ключевое слово
   expected-result: |
     Отображаются товары в которых присутствует ключевое слово в наименовании или описании товара
 
@@ -34,7 +34,7 @@
   test-data: |
     Блок фильтра
   steps: |
-    Устанавливаем фильтры
+    - Устанавливаем фильтры
   expected-result: |
     Отображаются товары соответствующие установленным фильтрам
 
@@ -61,7 +61,7 @@
   test-data: |
     Кнопка добавления товара
   steps:
-    Добавляем товар в корзину
+    - Добавляем товар в корзину
   expected-result: |
     Товар добавился в корзину
 
@@ -117,7 +117,7 @@
   test-data: |
     Все поля ввода
   steps:
-    Проверяем все поля ввода на возможность XSS атаки
+    - Проверяем все поля ввода на возможность XSS атаки
   expected-result: |
     XSS атака не должна пройти
 
@@ -130,7 +130,7 @@
   test-data: |
     Адаптивность данных под мобильное устройство
   steps:
-    Проверяем визуально удобство просмотра даных на мобильном устройстве
+    - Проверяем визуально удобство просмотра даных на мобильном устройстве
   expected-result: |
     Содержимое сайта удобно просматривать с мобильного устройства
 
