--- a/test-cases.yml
+++ b/test-cases.yml
@@ -9,7 +9,7 @@
     Категории
   steps: |
     - Выбираем нужную категорию
-  expected-result: |
+  expected-result:
     Отображаются товары соответствующие выбранной категории
 
 - summary: |
@@ -18,7 +18,7 @@
     При вводе ключевого слова, которое присутствует в наименовании или описании товара, должны выдаваться подходящии товары
   prerequisites: |
     Должна быть открыта страница со списком товаров
-  test-data: |
+  test-data:
     Ключевое слово, которое присутствует в наименовании или описании товара
   steps: |
     - В поиске вводим ключевое слово
@@ -33,7 +33,7 @@
     Должна быть открыта страница со списком товаров
   test-data: |
     Блок фильтра
-  steps: |
+  steps:
     - Устанавливаем фильтры
   expected-result: |
     Отображаются товары соответствующие установленным фильтрам
