--- a/test-cases.yml
+++ b/test-cases.yml
@@ -7,7 +7,7 @@
     Должна быть открыта страница со списком товаров
   test-data: |
     Категории
-  steps: |
+  steps:
     - Выбираем нужную категорию
   expected-result:
     Отображаются товары соответствующие выбранной категории
@@ -20,7 +20,7 @@
     Должна быть открыта страница со списком товаров
   test-data:
     Ключевое слово, которое присутствует в наименовании или описании товара
-  steps: |
+  steps:
     - В поиске вводим ключевое слово
   expected-result: |
     Отображаются товары в которых присутствует ключевое слово в наименовании или описании товара
